--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "parcel": "^2.15.4"
   },
   "dependencies": {
+    "build": "^0.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.7.0",
+    "react-router-dom": "^7.6.3"
   }
 }
