--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "jest"
   },
   "devDependencies": {
-    "parcel": "^2.15.4"
+    "autoprefixer": "^10.4.21",
+    "parcel": "^2.15.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
     "build": "^0.1.4",
